2019-09-24  Adrian Perez de Castro  <aperez@igalia.com>

        [GTK] ANGLE's eglplatform.h is build broken with -DENABLE_X11_PLATFORM=OFF
        https://bugs.webkit.org/show_bug.cgi?id=198621

        Reviewed by Carlos Garcia Campos.

        * PlatformGTK.cmake: Define WL_EGL_PLATFORM to prefer Wayland type
        definitions with ENABLE_WAYLAND_TARGET=ON and ENABLE_X11_TARGET=OFF
        to avoid ANGLE's eglplatform.h from trying to include the X11 headers.

2019-08-26  James Darpinian  <jdarpinian@google.com>

        Add a script to update ANGLE
        https://bugs.webkit.org/show_bug.cgi?id=201109

        Reviewed by Alex Christensen.

        * update-angle.sh: Added.

2019-08-16  Keith Rollin  <krollin@apple.com>

        Add XCBuild support to ANGLE
        https://bugs.webkit.org/show_bug.cgi?id=200836
        <rdar://problem/54410420>

        Reviewed by Alex Christensen.

        The ANGLE Xcode project contains two Build Phases: one that copies
        some headers, and another that modifies those headers. This
        combination does not work with XCBuild, which gets confused when it
        finds that headers that it's copied have been changed. When it detects
        this, XCBuild thinks that it should recopy those headers on the next
        build, causing their modification dates to change and for all
        dependent files to be rebuilt. This essentially turns an incremental
        rebuild into a full rebuild.

        Address this problem by using a new facility in Xcode 11. This
        facility supports the copying and modifying headers files in a single
        step. It is achieved by first enabling the facility by setting
        APPLY_RULES_IN_COPY_HEADERS to YES. Next, we add a new Build Rule that
        invokes a custom script when the header files are copied. Third, we
        provide this script, which can essentially be a stripped down version
        of the one already used to modify the exported headers files. Finally,